# wapc-guest-rust

./: Cargo.toml
src/: errors.rs  lib.rs
